refactor: change category names

--- a/index.html
+++ b/index.html
@@ -39,12 +39,14 @@
                 <button class="filter-btn active" data-category="all">
                   Todos
                 </button>
-                <button class="filter-btn" data-category="cha-casa-nova">
-                  Chá de Casa Nova
+                <button class="filter-btn" data-category="preparacao">
+                  Preparação para o casamento
                 </button>
-                <button class="filter-btn" data-category="casa">Casa</button>
-                <button class="filter-btn" data-category="experiencias">
-                  Experiências
+                <button class="filter-btn" data-category="lua-de-mel">
+                  Lua de mel
+                </button>
+                <button class="filter-btn" data-category="casa-nova">
+                  Casa nova
                 </button>
               </div>
             </div>
