refactor: change couple names' font family to match invitation's

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lista de Presentes - Flavia & Fernando</title>
+    <title>Lista de Presentes - Fernando & Flavia</title>
     <link rel="stylesheet" href="styles.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;500;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Allura&family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;500;600&display=swap"
       rel="stylesheet"
     />
     <link
@@ -18,7 +18,7 @@
     <div class="container">
       <!-- Header Section -->
       <header class="header">
-        <div class="couple-names">Flavia & Fernando</div>
+        <div class="couple-names">Fernando & Flavia</div>
         <div class="wedding-date">23 DE NOVEMBRO DE 2025</div>
         <div class="countdown-banner">
           <span id="countdown-text"
