refactor: change all serif fonts by sans-serif

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Lista de Presentes - Fernando & Flavia</title>
     <link rel="stylesheet" href="styles.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Allura&family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;500;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Allura&family=Lato:wght@300;400;700&family=Inter:wght@300;400;500;600&display=swap"
       rel="stylesheet"
     />
     <link
@@ -31,7 +31,7 @@
       <!-- Main Content -->
       <main class="main-content">
         <div class="content-header">
-          <h1 class="page-title">Presentes</h1>
+          <h1 class="page-title">Lista de Presentes</h1>
           <div class="controls">
             <div class="filter-section">
               <label>Filtrar por categoria:</label>
