feat: add modal for when users click on gift components

--- a/index.html
+++ b/index.html
@@ -77,6 +77,41 @@
       </footer>
     </div>
 
+    <!-- Gift Modal -->
+    <div id="gift-modal" class="modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2 id="modal-title" class="modal-title"></h2>
+          <button class="modal-close" id="modal-close">
+            <i class="fas fa-times"></i>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="modal-image-container">
+            <img id="modal-image" class="modal-image" src="" alt="" />
+          </div>
+          <div class="modal-details">
+            <p id="modal-description" class="modal-description"></p>
+            <div id="modal-price" class="modal-price"></div>
+            <div class="modal-category">
+              <span id="modal-category" class="modal-category-badge"></span>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <a
+            id="modal-buy-button"
+            href=""
+            class="modal-buy-btn"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            Transferir Presente
+          </a>
+        </div>
+      </div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
