--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             target="_blank"
             rel="noopener noreferrer"
           >
-            Transferir Presente
+            Presentear
           </a>
         </div>
       </div>
