feat: add visitor count API with Vercel serverless function

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <footer class="footer">
         <div class="visitor-counter">
           <i class="fas fa-heart"></i>
-          <span id="visitor-count">48 PESSOAS ESTIVERAM AQUI</span>
+          <span id="visitor-count"></span>
         </div>
       </footer>
     </div>
