feat: add slight shinny effect on the golden circle

--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
           <div class="invitation-content">
           <!-- Golden Frame with Names -->
           <div class="golden-frame">
-            <img
-              src="images/convite-circulo.png"
-              alt="Golden frame decoration"
-              class="frame-image"
-            />
+            <div class="frame-image-container">
+              <img
+                src="images/convite-circulo.png"
+                alt="Golden frame decoration"
+                class="frame-image"
+              />
+            </div>
             <div class="frame-content">
               <h1 class="couple-names-frame">Fernando<br />& Flavia</h1>
             </div>
