feat: add encryption to the invitee name read from a url query param

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <!-- Invitation Text -->
           <div class="invitation-text-section">
             <h2 class="invite-word">CONVIDAM</h2>
-            <p class="family-text">Família Gabriel – Jorge, Miriam e Augusto</p>
+            <p class="family-text" id="family-text">você</p>
             <p class="celebration-text">
               <span class="garamond-text">para</span> <strong>CELEBRAR</strong>
               <span class="garamond-text">seu</span> <strong>CASAMENTO</strong>
@@ -78,8 +78,8 @@
 
           <!-- RSVP Instructions -->
           <div class="rsvp-instructions">
-            CONFIRMAR A PRESENÇA ATRAVÉS DO RSVP ACIMA PARA A ASSESSORIA PATÊ
-            ZANETTI ATÉ O DIA 18 DE NOVEMBRO DE 2025.
+            CONFIRMAR A PRESENÇA ATRAVÉS DO BOTÃO ACIMA PARA A ASSESSORIA PATÊ
+            ZANETTI ATÉ O DIA 5 DE NOVEMBRO DE 2025.
           </div>
         </div>
       </div>
@@ -178,6 +178,8 @@
       </div>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsencrypt/3.3.2/jsencrypt.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
