--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="light only" />
+    <meta name="theme-color" content="#F5F8ED" />
     <title>Lista de Presentes - Fernando & Flavia</title>
     <link rel="stylesheet" href="styles.css" />
     <link
