feat: replace OpenGraph basic preview by an image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="Celebre conosco nosso casamento! Confirme sua presença em nosso convite virtual." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://casamento-fernando-e-flavia-2025.com" />
-    <meta property="og:image" content="https://casamento-fernando-e-flavia-2025.com/api/og" />
+    <meta property="og:image" content="https://casamento-fernando-e-flavia-2025.com/images/og.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="Convite de Casamento - Fernando & Flavia" />
@@ -22,7 +22,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Casamento Fernando & Flavia 2025" />
     <meta name="twitter:description" content="Celebre conosco nosso casamento! Confirme sua presença em nosso convite virtual." />
-    <meta name="twitter:image" content="https://casamento-fernando-e-flavia-2025.com/api/og" />
+    <meta name="twitter:image" content="https://casamento-fernando-e-flavia-2025.com/images/og.png" />
     
     <title>Lista de Presentes - Fernando & Flavia</title>
     <link rel="stylesheet" href="styles.css" />
