refactor: change title

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta name="twitter:description" content="Celebre conosco nosso casamento! Confirme sua presença em nosso convite virtual." />
     <meta name="twitter:image" content="https://casamento-fernando-e-flavia-2025.com/images/og.png" />
     
-    <title>Lista de Presentes - Fernando & Flavia</title>
+    <title>Casamento - Fernando & Flavia 2025</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Allura&family=Poppins:wght@700&family=EB+Garamond:ital,wght@0,400;1,400;1,700&display=swap"
